test powerset impl, fix it, which makes validCommit more correct